fix: group Python package updates into single PR

--- a/org-inherited-config.json
+++ b/org-inherited-config.json
@@ -23,6 +23,14 @@
   ],
   "internalChecksAsSuccess": true,
   "minimumReleaseAge": "3 days",
+  "packageRules": [
+    {
+      "matchPackageNames": [
+        "/python/"
+      ],
+      "groupName": "python"
+    }
+  ],
   "pep723": {
     "managerFilePatterns": [
       ".*\\.py"
