chore: use PEP440 versioning for Python Docker images

--- a/org-inherited-config.json
+++ b/org-inherited-config.json
@@ -25,6 +25,15 @@
   "minimumReleaseAge": "14 days",
   "packageRules": [
     {
+      "matchDatasources": [
+        "docker"
+      ],
+      "matchPackageNames": [
+        "python"
+      ],
+      "versioning": "pep440"
+    },
+    {
       "matchPackageNames": [
         "/python/"
       ],
