feat: enable lockFileMaintenance

--- a/org-inherited-config.json
+++ b/org-inherited-config.json
@@ -22,6 +22,9 @@
     "mergeConfidence:all-badges"
   ],
   "internalChecksAsSuccess": true,
+  "lockFileMaintenance": {
+    "enabled": true
+  },
   "packageRules": [
     {
       "matchPackageNames": [
