fix: use ARG for regex customManager

--- a/org-inherited-config.json
+++ b/org-inherited-config.json
@@ -10,7 +10,7 @@
         "/^Dockerfile$/"
       ],
       "matchStrings": [
-        "#\\s*renovate:\\s*datasource=(?<datasource>.*?) (depName=(?<depName>.*?)|packageName=(?<packageName>.*?))( versioning=(?<versioning>.*?))?\\sENV .*?_VERSION=\"(?<currentValue>.*)\"\\s"
+        "#\\s*renovate:\\s*datasource=(?<datasource>.*?) (depName=(?<depName>.*?)|packageName=(?<packageName>.*?))( versioning=(?<versioning>.*?))?\\sARG .*?_VERSION=\"(?<currentValue>.*)\"\\s"
       ],
       "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}semver{{/if}}"
     }
