--- a/org-inherited-config.json
+++ b/org-inherited-config.json
@@ -41,6 +41,7 @@
     ]
   },
   "platformAutomerge": false,
+  "prCreation": "not-pending",
   "prHourlyLimit": 0,
   "timezone": "Australia/Brisbane"
 }
