fix: enable pre-commit dependency updates

--- a/org-inherited-config.json
+++ b/org-inherited-config.json
@@ -41,6 +41,9 @@
     ]
   },
   "platformAutomerge": false,
+  "pre-commit": {
+    "enabled": true
+  },
   "prHourlyLimit": 0,
   "timezone": "Australia/Brisbane"
 }
